fix update issue